k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: 637423311003.dkr.ecr.us-east-1.amazonaws.com/mlops/demo:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
