k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-external
  namespace: demo
  labels:
    app: flask-api
spec:
  type: NodePort
  ports:
    - port: 80              # The port inside the cluster
      targetPort: 8080      # The container port
      nodePort: 30081       # External port on your node (optional but recommended)
      protocol: TCP
  selector:
    app: flask-api
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-svc
  namespace: demo
  labels:
    app: flask-api
spec:
  type: ClusterIP
  ports:
    - port: 8080          # Service port inside the cluster
      targetPort: 8080  # Container port
      protocol: TCP
  selector:
    app: flask-api
