k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: demo
  labels:
    app: flask-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: flask-api
